--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ node_modules
 
 # Optional REPL history
 .node_repl_history
+
+/lib/*.js
+/lib/*.js.map
+!/lib/index.js
+/src
+/typings/browser*
+/typings/main
