--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "tap-spec": "^4.1.1",
     "tape": "^4.5.1",
     "testdouble": "^1.2.0",
-    "typescript": "^1.8.9",
-    "typings": "^0.7.11"
+    "typescript": "^1.8.9"
   },
   "scripts": {
     "pretest": "npm run build",
