--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es6",
-    "noImplicitAny": true,
-    "sourceMap": true
+    "target": "es5",
+    "noImplicitAny": true
   },
   "files": [
-    "node_modules/rx/ts/rx.all.es6.d.ts",
-    "lib/Maxcon.ts",
-    "lib/utils.ts"
+    "typings/main.d.ts",
+    "node_modules/rx/ts/rx.all.d.ts",
+    "src/index.ts"
   ]
 }
