--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/d6u/dev-runner#readme",
   "main": "lib/index.js",
+  "typings": "lib/Maxcon.d.ts",
   "files": [
     "lib",
     "src"
