--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "target": "es5",
     "noImplicitAny": true,
     "outDir": "lib",
-    "sourceMap": true
+    "sourceMap": true,
+    "declaration": true
   },
   "files": [
     "typings/main.d.ts",
